# verse

./: .gitignore  .gitlab-ci.yml  .travis.yml  BSD-LICENSE  CMakeLists.txt  GPL-LICENSE  LICENSE  README.md  index.html  params.json
build_files/cmake/modules/: FindCheck.cmake  FindIniparser.cmake  FindKerberos.cmake  FindMongoDB.cmake  FindPythonLibsUnix.cmake  FindVerse.cmake  FindWSLay.cmake
config/: server.ini  users.csv  users.csv.example
doc/doxygen/: verse2-cmake.doxyfile  verse2.doxyfile
doc/templates/: command_template.c  object_template.c  v_command_template.h
example/: CMakeLists.txt  index.html  verse_client.c  verse_client.py
include/: v_cmd_queue.h  v_commands.h  v_common.h  v_connection.h  v_context.h  v_fake_commands.h  v_history.h  v_in_queue.h  v_layer_commands.h  v_list.h  v_network.h  v_node_commands.h  v_out_queue.h  v_pack.h  v_packet_history.h  v_resend_mechanism.h  v_session.h  v_stream.h  v_sys_commands.h  v_tag_commands.h  v_taggroup_commands.h  v_unpack.h  vc_main.h  vc_tcp_connect.h  vc_udp_connect.h  verse.h  verse_types.h  vs_auth_csv.h  vs_auth_ldap.h  vs_auth_pam.h  vs_avatar.h  vs_config.h  vs_data.h  vs_entity.h  vs_handshake.h  vs_layer.h  vs_link.h  vs_main.h  vs_mongo.h  vs_mongo_layer.h  (+13 more)
javascript/: .gitignore  .jshintrc  Gruntfile.js  app.js  bower.json  index.html  package.json  request.js  response.js  socket.js  test.js
javascript/spec/: negotiation_spec.js  request_spec.js  response_spec.js
javascript/src/: app.js  negotiation.js  request.js  response.js  socket.js  wsocket.js
misc/: verse_coding_style.xml
misc/logo/: LICENSE  verse_logo.blend
misc/promela/dgram/: Makefile  dgram.pml
misc/promela/handshake/host_neg/: Makefile
misc/promela/handshake/user_auth/: Makefile  user_auth.pml
misc/stub/src/common/node_commands/: v_node_subscribe.c.txt
misc/stub/src/common/node_commands/cmd_gen/: v_cmd_gen.c.txt
misc/stub/src/common/node_commands/taggroup_cmds/: v_taggroup_create.c.txt
pki/: certificate.pem
promela/: README
promela/dgram/: Makefile  dgram.pml
promela/handshake/host_neg/: Makefile  host_neg.pml
promela/handshake/user_auth/: Makefile  user_auth.pml
python/: CMakeLists.txt  verse_module.c
python/2.x/: CMakeLists.txt
python/3.x/: CMakeLists.txt
release/init/: versed
src/: CMakeLists.txt
src/api/: verse.c
src/client/: vc_main.c  vc_tcp_connect.c  vc_udp_connect.c
src/common/: v_commands.c  v_common.c  v_connection.c  v_context.c  v_history.c  v_list.c  v_network.c  v_pack.c  v_resend_mechanism.c  v_session.c  v_stream.c  v_unpack.c
src/common/fake_cmds/: v_fake_commands.c  v_fake_connect_accept.c  v_fake_connect_terminate.c  v_fake_fps.c  v_fake_layer_create_ack.c  v_fake_layer_destroy_ack.c  v_fake_node_create_ack.c  v_fake_node_destroy_ack.c  v_fake_tag_create_ack.c  v_fake_tag_destroy_ack.c  v_fake_taggroup_create_ack.c  v_fake_taggroup_destroy_ack.c  v_fake_user_auth.c
src/common/node_cmds/: v_node_create.c  v_node_destroy.c  v_node_link.c  v_node_lock.c  v_node_owner.c  v_node_perm.c  v_node_prio.c  v_node_subscribe.c  v_node_unlock.c  v_node_unsubscribe.c
src/common/node_cmds/layer_cmds/: v_layer_create.c  v_layer_destroy.c  v_layer_set_value.c  v_layer_subscribe.c  v_layer_unset_value.c  v_layer_unsubscribe.c
src/common/node_cmds/taggroup_cmds/: v_taggroup_create.c  v_taggroup_destroy.c  v_taggroup_subscribe.c  v_taggroup_unsubscribe.c
src/common/node_cmds/taggroup_cmds/tag_cmds/: v_tag_create.c  v_tag_destroy.c  v_tag_set.c
src/common/queues/: v_cmd_queue.c  v_in_queue.c  v_out_queue.c
src/common/sys_cmds/: v_ack_nak.c  v_negotiate.c  v_sys_commands.c  v_user_auth_failure.c  v_user_auth_request.c  v_user_auth_success.c
src/lib/: CMakeLists.txt
src/lib/api/: verse.c
src/lib/client/: vc_main.c  vc_tcp_connect.c  vc_udp_connect.c
src/lib/common/: v_commands.c  v_common.c  v_connection.c  v_context.c  v_history.c  v_list.c  v_network.c  v_pack.c  v_resend_mechanism.c  v_session.c  v_stream.c  v_unpack.c
src/lib/common/fake_cmds/: v_fake_commands.c  v_fake_connect_accept.c  v_fake_connect_terminate.c  v_fake_fps.c  v_fake_layer_create_ack.c  v_fake_layer_destroy_ack.c  v_fake_node_create_ack.c  v_fake_node_destroy_ack.c  v_fake_tag_create_ack.c  v_fake_taggroup_destroy_ack.c  v_fake_user_auth.c
src/lib/common/node_cmds/: v_node_create.c  v_node_link.c  v_node_owner.c  v_node_prio.c
src/lib/common/node_cmds/layer_cmds/: v_layer_set_value.c  v_layer_subscribe.c  v_layer_unsubscribe.c
src/lib/common/node_cmds/taggroup_cmds/: v_taggroup_unsubscribe.c
src/lib/common/node_cmds/taggroup_cmds/tag_cmds/: v_tag_create.c  v_tag_destroy.c  v_tag_set.c
src/lib/common/queues/: v_in_queue.c  v_out_queue.c
src/lib/common/sys_cmds/: v_negotiate.c  v_sys_commands.c  v_user_auth_failure.c  v_user_auth_request.c  v_user_auth_success.c
src/python/: verse_module.c
src/python/2.x/: CMakeLists.txt
src/python/3.x/: CMakeLists.txt
src/server/: CMakeLists.txt  vs_auth_csv.c  vs_auth_ldap.c  vs_auth_pam.c  vs_config.c  vs_data.c  vs_handshake.c  vs_layer.c  vs_link.c  vs_main.c  vs_mongo.c  vs_node.c  vs_node_access.c  vs_sys_nodes.c  vs_tag.c  vs_taggroup.c  vs_task.c  vs_tcp_connect.c  vs_udp_connect.c  vs_user.c  vs_websocket.c
src/server/mongodb/: vs_mongo_layer.c  vs_mongo_main.c  vs_mongo_node.c  vs_mongo_taggroup.c
stub/include/: v_node_commands.h.txt
stub/src/common/: v_commands.c.txt
stub/src/common/node_commands/: v_node_create.c.txt  v_node_destroy.c.txt  v_node_unsubscribe.c.txt
stub/src/common/node_commands/cmd_gen/: v_cmd_gen.h.txt
stub/src/common/node_commands/taggroup_cmds/: v_taggroup_destroy.c.txt
stub/unittests/: tests.c.txt
unittests/: CMakeLists.txt  t_main.c
unittests/common/node_cmds/: t_node_create.c  t_node_destroy.c
unittests/common/node_cmds/taggroup_cmds/: t_taggroup_create.c
unittests/common/pack_unpack/: t_pack.c  t_unpack.c
unittests/common/sys_cmds/: t_negotiate.c
unittests/include/: t_suites.h
